Basic login structure

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,6 @@
-body{
+body {
   background-color: wheat;
   font: 14px "Georgia", Helvetica, Arial, sans-serif;
   margin: 0;
 }
-
-main{
-
-}
+/*# sourceMappingURL=style.css.map */
