--- a/views/layouts/adminLayout.hbs
+++ b/views/layouts/adminLayout.hbs
@@ -14,7 +14,7 @@
   <nav class="nav-bar">
     <div class="nav-btn-left">
       <a href="/"><img class="atom-icon" src="images/atom.svg"></a>
-      <a class="nav-btn" href="/my-page">My Page</a>
+      <a class="nav-btn" href="/admin-page">Admin page</a>
     </div>
     <div class="nav-btn-right">
       <a id="nav-logout" class="nav-btn" href="/logout">Logout</a>
