--- a/views/layouts/noAuth.hbs
+++ b/views/layouts/noAuth.hbs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
+  <title>AlloyMeApp</title>
   <link rel="stylesheet" href="/stylesheets/style.css"/>
   <link rel="stylesheet" href="/stylesheets/styles-nav-bar.css">
 </head>
@@ -13,15 +13,12 @@
   <nav class="nav-bar">
     <div class="nav-btn-left">
       <a href="/"><img class="atom-icon" src="images/atom.svg"></a>
-      <a class="nav-btn" href="/my-page">My Page</a>
     </div>
     <div class="nav-btn-right">
       <a id="nav-login" class="nav-btn" href="/login">Login</a>
       <a id="nav-signup" class="nav-btn" href="/signup">Sign up</a>
     </div>
   </nav>
-
-  {{!-- <div id="show-nav"></div> --}}
 
   <main>
     {{{body}}}
