--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,9 +1,117 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
+
 body{
   background-color: wheat;
-  font: 14px "Georgia", Helvetica, Arial, sans-serif;
+  font: 14px "Josefin Sans", Helvetica, Arial, sans-serif;
   margin: 0;
 }
-
 main{
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.title{
+  font-weight: 800;
+  font-size: 3rem;
+  text-align: center;
+  margin: 60px 0 40px;
+}
+input{
+  font: 18px 'Josefin Sans', sans-serif;
+  text-align: center;
+  width: 250px;
+  height: 30px;
+  background-color: antiquewhite;
+  border: none;
+  margin: 5px 0;
+}
+button{
+  font: 24px 'Josefin Sans', sans-serif;
+  width: 150px;
+  height: 50px;
+  border: none;
+  margin: 10px 0;
+  border-radius: 8px;
+  &:hover{
+    font-weight: 600;
+    background-color: tan;
+  }
+}
+#signup-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#login-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.admin-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+}
+.knowledge-points{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.3rem;
+  p{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 100px 0 0;
+  }
+}
+#points-num{
+  color: red;
+  font-size: 1.8rem;
+  font-weight: 800;
+  margin: 20px 0;
+}
+.saved-comments{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.3rem;
+  p{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 100px 0 0;
+  }
+  table{
+    margin: 30px;
+  }
+  tr{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  td{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 5px 20px;
+  }
+  input{
+    width: 120px;
+  }
+  button{
+    // background: none;
+    border: none;
+    width: 40px;
+    height: 40px;
+    margin: 0 5px;
+  }
+  img{
+    width: 10px;
+  }
 }
