--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,12 +1,12 @@
-<h1>Login page</h1>
+<h1 class="title">Login</h1>
 
-<form action="/login" method="POST">
+<form id="login-form" action="/login" method="POST">
 
   <input type="text" name="username" placeholder="Input your username">
 
   <input type="password" name="password" placeholder="Input your password">
 
-  <button type="submit">Log in</button>
+  <button type="submit">Login</button>
 
 </form>
 
