--- a/views/myPage.hbs
+++ b/views/myPage.hbs
@@ -1,11 +1,49 @@
-<h1>My page</h1>
+<h1 class="title">{{data.username}}'s page</h1>
 
-<h2>Welcome {{username}}</h2>
+<h2 class="subtitle">{{#if data.admin}} (admin){{else}} (member){{/if}}
+</h2>
 
-<a href="elements/new">Add new element</a>
+{{!-- {{#if data.admin}}
+<form class="admin-form" action="new/element" method="POST">
+  <input type="text" name="elementName" placeholder="Introduce a new element">
+  <button type="submit">Create</button>
+</form>
 
-<h3>Your picked elements:</h3>
+{{#if createdMsg}}this{{/if}}
 
-{{#each elements}}
-<p>{{element}}</p>
-{{/each}}
+<form class="admin-form" action="new/alloy" method="POST">
+  <input type="text" name="new-alloy" placeholder="Introduce a new alloy">
+  <button type="submit">Create</button>
+</form>
+{{/if}} --}}
+
+<div class="knowledge-points">
+  <p>Your knowledge points:</p>
+  <p id="points-num">{{data.knowledgePoints}}</p>
+</div>
+
+<div class="saved-comments">
+  <p>Your saved comments:</p>
+  <table>
+    {{#each data.comments as |item index|}}
+    <tr>
+      <td><li>{{this}}</li></td>
+      <td>
+
+        <form action="/comments/edit/{{index}}" method="POST">
+          <input type="text" name="newComment" placeholder="Edit comment">
+          <button type="submit"><img src="../images/edit.png" alt="edit-icon"></button>
+        </form>
+        <form action="/comments/delete/{{index}}" method="POST">
+          <button type="submit"><img src="../images/delete.png" alt="delete-icon"></button>
+        </form>
+      </td>
+    </tr>
+    {{/each}}
+  </table>
+</div>
+
+<form class="comments-form" action="comments/new" method="POST">
+  <input type="text" name="comments" placeholder="Introduce a new comment">
+  <button type="submit">Save</button>
+</form>
