--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,6 +1,6 @@
-<h1>Sign up page</h1>
+<h1 class="title">Create new account</h1>
 
-<form action="/signup" method="POST">
+<form id="signup-form" action="/signup" method="POST">
 
   <input type="text" name="username" placeholder="Input your username">
 
