--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
+
 body{
   background-color: wheat;
   font: 14px "Josefin Sans", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0;  
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 main{
   display: flex;
@@ -27,15 +31,18 @@ input{
   margin: 5px 0;
 }
 button{
+  background-color: tan;
   font: 24px 'Josefin Sans', sans-serif;
-  width: 150px;
   height: 50px;
   border: none;
   margin: 10px 0;
   border-radius: 8px;
+  padding: 8px;
   &:hover{
+    border-inline: 2px groove saddlebrown;
+    color: saddlebrown;
     font-weight: 600;
-    background-color: tan;
+    background-color: bisque;
   }
 }
 #signup-form{
@@ -47,16 +54,6 @@ button{
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.admin-form{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 30px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
-  box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
 }
 .knowledge-points{
   display: flex;
@@ -106,12 +103,225 @@ button{
   }
   button{
     // background: none;
-    border: none;
     width: 40px;
     height: 40px;
     margin: 0 5px;
   }
   img{
     width: 10px;
+  }
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  text-align: center;
+  cursor: pointer;
+  padding: 18px;
+  width: 80%;
+  &:hover{
+    padding: 16px;
+    border: 2px groove saddlebrown;
+    color: saddlebrown;
+    font-weight: 600;
+    background-color: bisque;
+  }
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active{
+  padding: 16px;
+  border: 2px groove saddlebrown;
+  color: saddlebrown;
+  font-weight: 600;
+  background-color: bisque;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  background-color: bisque;
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  .admin-users-main-table{
+    font-weight: 600;
+    background-color: tan;
+    margin: 15px;
+    width: auto;
+    border: 2px ridge saddlebrown;
+    -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+    box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+    th{
+      font-weight: 800;
+      font-size: 1.2rem;
+      text-align: center;
+      vertical-align: middle;
+      height: 60px;
+      padding: 0 20px;
+      border: 1px solid saddlebrown;
+    }
+    .border-sides{
+      border-left: 1px solid saddlebrown;
+      border-right: 1px solid saddlebrown;
+    }
+    .admin-user-tablerow{
+      background-color: peachpuff;
+      td{
+        padding: 10px 20px;
+        width: auto;
+      }
+      .admin-user-checkbox{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+        input{
+          width: 20px;
+        }
+      }
+      .td-knowledge-points{
+        text-align: center;
+      }
+      img{
+        width: 10px;
+      }
+      button{
+        padding: 0;
+        text-align: center;
+        height: 30px;
+        width: 30px;
+      }
+    }
+  }
+}
+.admin-form{
+  font-size: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px 0;
+  border-radius: 10px;
+  min-width: 220px;
+  padding: 10px;
+  background-color: peachpuff;
+  -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  p{
+    margin: 20px 0;
+  }
+  .admin-new-user-checkbox{
+    vertical-align: middle;
+  }
+  .checkbox-admin-new{
+    width: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.1rem;
+    
+    &>*{
+      padding: 0 10px;
+    }
+  }
+}
+// .modal{
+//     display: none; /* Hidden by default */
+//     position: fixed; /* Stay in place */
+//     z-index: 1; /* Sit on top */
+//     left: 0;
+//     top: 0;
+//     width: 100%; /* Full width */
+//     height: 100%; /* Full height */
+//     overflow: auto; /* Enable scroll if needed */
+//     background-color: rgb(0,0,0); /* Fallback color */
+//     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+//   .modal-content {
+//     background-color: #fefefe;
+//     margin: 15% auto; /* 15% from the top and centered */
+//     padding: 20px;
+//     border: 1px solid #888;
+//     width: 80%; /* Could be more or less, depending on screen size */
+//   }
+//   .close-modal {
+//     color: #aaa;
+//     float: right;
+//     font-size: 28px;
+//     font-weight: bold;
+//     &:hover, :focus{
+  //       color: black;
+  //       text-decoration: none;
+  //       cursor: pointer;
+  //     }
+  //   }
+  // }
+  
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  transition: 1s;
+  .modal-content {
+    display: flex;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 10px;
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+    height: auto;
+    .close-modal {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      width: 30px;
+      height: auto;
+      text-align: center;
+      align-self: flex-end;
+      &:hover, :focus{
+        color: tan;
+        text-decoration: none;
+        cursor: pointer;
+      }
+    }
+    .modal-edit-data{
+      display: flex;
+      flex-direction: row;
+      height: 100%;
+      .modal-edit-label{
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+        min-height: 100%;
+        font-size: 1.5rem;
+        label{
+          text-align: end;
+          padding: 8px 10px;
+        }
+      }
+      .modal-edit-input{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 60%;
+      }
+    }
+    button{
+      margin-bottom: 0;
+    }
   }
 }
